Added file download

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-    <title>Kid's Compose</title>
+    <title>kedge</title>
     <script src="json2yaml.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script type="text/javascript">
         window.blockly_loaded = function(blockly) {
@@ -10,15 +11,25 @@
 
 		window.run_code = function() {
 	      	code = window.Blockly.JavaScript.workspaceToCode();
-
+	      	c = JSON.parse(code);
             console.log(code);
+            $.ajax({
+                type: "POST",
+                url: "https://5ae63feb.ngrok.io/api/v1/generate",
+                data: JSON.stringify(c),
+                success: function(dataString) {
+                    console.log(dataString);
+                    download("kubernetes.yml", dataString);
+
+                }
+            });
 			 //document.getElementById("demo").innerHTML = code;
              //var code = {language: 'node_js', node_js: ['0.10', '0.11']};
-            var yaml = json2yaml(code);
-            console.log(yaml);
-			document.getElementById("demo").innerHTML = yaml;
-			download("docker-compose.yml", yaml)
-		}
+         //   var yaml = json2yaml(code);
+     ////       console.log(yaml);
+			// document.getElementById("demo").innerHTML = yaml;
+		//	download("docker-compose.yml", yaml)
+		};
 
 		function download(filename, text) {
           var element = document.createElement('a');
@@ -38,7 +49,7 @@
 
 <body>
 
-<h1 id="header">X's Compose (X is yet to be defined)</h1>
+<h1 id="header">Kedge</h1>
 
 <div id="blockly_editor">
 
@@ -47,18 +58,19 @@
 </div>
 <br>
 
-<button id="button_run" onclick="run_code()">Generate Compose file</button>
+<button id="button_run" onclick="run_code()">Generate kedge  file</button>
 <br>
 <br>
-<button id="button_k8s" onclick="run_code()">Generate Kubernetes file</button>
+<button id="button_k8s"type="file">Upload Kubeconfig file</button>
 <br>
 <br>
-<button id="button_oc" onclick="run_code()">Generate Openshift file</button>
-<br>
+<!--<button id="button_oc" onclick="run_code()">Generate Openshift file</button>
+<br>-->
 
          <br>
 
-<p id="demo" contenteditable="true"></p>
+<!-- <p id="demo" contenteditable="true"></p>
+-->
 </body>
 
 </html>
