--- a/blockly.html
+++ b/blockly.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 
@@ -14,27 +13,7 @@
     <script src="blocks.js"></script>
 
     <!-- //copy-->
-    <script>
- function init() {
-  var workspace = Blockly.inject('blocklyDiv',
-      {toolbox: document.getElementById('toolbox'),
-      zoom:
-         {controls: true,
-          wheel: false,
-          startScale: 1.0,
-          maxScale: 3,
-          minScale: 0.3,
-          scaleSpeed: 1.2},
-     trashcan: true});
 
- window.parent.blockly_loaded(Blockly);
- var rootBlock = Blockly.Block.obtain(Blockly.mainWorkspace, 'version');
-        rootBlock.initSvg();
-        rootBlock.render();
-        rootBlock.setMovable(false);
-        rootBlock.setDeletable(false);
-}
-</script>
 
 </head>
 
@@ -44,54 +23,56 @@
 <div id="blocklyDiv" style="height: 700px; width: 900px;"></div>
 
 <xml id="toolbox" style="display: none">
-    <category name="version">
+    <category name="filename">
         <block type="version"></block>
+
+        <block type="name"></block>
+        <block type="controller"></block>
+        <block type="main"></block>
+
     </category>
-    <category name="service">
-        <block type="service_name"></block>
-          <block type="image_name"></block>
-          <block type="ports"></block>
-        <block type="restart"></block>
+
+    <category name="containers">
+        <block type="containers"></block>
         <block type="container_name"></block>
-        <block type="page_text"></block>
-        <block type="environment"></block>
+        <block type="image"></block>
+        <block type="env_mappings"></block>
+        <block type="env"></block>
     </category>
 
-    <category name="Image">
-        <block type="image_name"></block>
+    <category name="services">
+        <block type="services"></block>
+        <block type="service_name"></block>
+        <block type="service_type"></block>
+        <block type="ports_mappings"></block>
         <block type="label_output"></block>
+
     </category>
 
-    <category name="Ports">
-        <block type="ports"></block>
-        <block type="label_output"></block>
-    </category>
-    <category name="Args">
-        <block type="args"></block>
-        <block type="label_output"></block>
-    </category>
-    <category name="labels">
-        <block type="labels"></block>
-        <block type="label_output"></block>
-    </category>
-    <category name="links">
-        <block type="links"></block>
-        <block type="label_output"></block>
-    </category>
-    <category name="environment">
-        <block type="environment"></block>
-        <block type="label_output"></block>
-        <block type="env_file"></block>
-        <block type="page_text"></block>
-    </category>
-    <category name="capabilites">
-        <block type="cap_add"></block>
-        <block type="cap_drop"></block>
-        <block type="label_output"></block>
-    </category>
+
 </xml>
 
+<script>
+    function init() {
+        var workspace = Blockly.inject('blocklyDiv',
+                {toolbox: document.getElementById('toolbox'),
+                    zoom:
+                            {controls: true,
+                                wheel: true,
+                                startScale: 1.0,
+                                maxScale: 3,
+                                minScale: 0.3,
+                                scaleSpeed: 1.2},
+                    trashcan: true});
 
+        window.parent.blockly_loaded(Blockly);
+        var rootBlock = Blockly.Block.obtain(Blockly.mainWorkspace, 'main');
+        rootBlock.initSvg();
+        rootBlock.render();
+        rootBlock.setMovable(false);
+        rootBlock.setDeletable(false);
+    }
+</script>
 
 </body>
 
